Bug 329845 - menu is invisible after closed kbreakout in fullscreen mode
Summary: menu is invisible after closed kbreakout in fullscreen mode
Status: RESOLVED FIXED
Alias: None
Product: kbreakout
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Viranch Mehta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-11 12:40 UTC by marian.trenkwalder
Modified: 2014-01-27 01:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13
Sentry Crash Report:


Attachments
bugfix (883 bytes, patch)
2014-01-11 12:50 UTC, marian.trenkwalder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marian.trenkwalder 2014-01-11 12:40:40 UTC
After I directly close kbreakout from the full screen mode the menu isn't visible again when restart.

A workaround is going to full screen again. And then going out of full screen.

Reproducible: Always

Steps to Reproduce:
1.<str>+<shift>+f to get in full screen mode
2.<alt>+<f4> to close window
3. restart kbreakout
Actual Results:  
The menu is not visible.

Expected Results:  
The Menu should always visible in not full screen mode.
Comment 1 marian.trenkwalder 2014-01-11 12:50:27 UTC
Created attachment 84568 [details]
bugfix
Comment 2 Chao Feng 2014-01-14 13:35:30 UTC
Git commit ed6db8e4b4bd16668c248232b0f90d24231a7f9e by Feng Chao.
Committed on 14/01/2014 at 13:31.
Pushed by fengchao into branch 'master'.

Fix Bug 329845 - menu is invisible after closed kbreakout in fullscreen mode

Merge patch from Marian.

M  +6    -0    src/mainwindow.cpp

http://commits.kde.org/kbreakout/ed6db8e4b4bd16668c248232b0f90d24231a7f9e
Comment 3 Chao Feng 2014-01-14 13:37:23 UTC
Marian, thank you for the patch.