Fix Bug 329845 - menu is invisible after closed kbreakout in fullscreen mode

Merge patch from Marian.

BUG: 329845